# udp-transfiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  args.h  client.cc  client_config.ini  main.cpp  server.cc  server_config.ini
core/: Constant.h  EventLoop.cc  EventLoop.h  IoBuffer.h  Logging.h  MemPool.cc  MemPool.h  MenPool.cc  MenPool.h
core/ack/: AckRandom.cc  AckRandom.h  AckSet.cc  AckSet.h
core/file/: Directory.cc  Directory.h  File.cc  File.h  FileHash.cc  FileHash.h
core/file/client/: File.cc  File.h
core/file/server/: Directory.cc  Directory.h  File.cc  File.h  FileMap.cc  FileMap.h
core/log/: Log.cc  Log.h
core/pool/: MemPool.cc  MemPool.h  ThreadPool.cc  ThreadPool.h
core/timer/: Timer.cc  Timer.h
core/udp/: UdpClient.cc  UdpClient.h  UdpServer.cc  UdpServer.h  UpdServer.cc  UpdServer.h
docker/: dockerfile
proto/: command_msg.proto  downfile_interruption_info.proto  file_down_info.proto  file_down_info_msg.proto  file_down_msg.proto  fileinfos_msg.proto  package_msg.proto
src/: Constant.h  Interaction.cc  Interaction.h  utils.h
src/config/: ClientConfig.cc  ClientConfig.h  Config.h  ServerConfig.cc  ServerConfig.h
src/downfile/: DownloadSpeedsLimiter.cc  DownloadSpeedsLimiter.h  Downloader.cc  Downloader.h  DownloaderEvents.cc  DownloaderEvents.h  DownloaderStatistics.cc  DownloaderStatistics.h
src/downfile/interruptionInfo/: downfile_interruption_info.pb.cc  downfile_interruption_info.pb.h
src/msg/: Buffer.cc  Buffer.h  Command.h  Msg.h  Validator.cc  Validator.h
src/msg/proto/: command_msg.pb.cc  command_msg.pb.h  file_down_info.pb.cc  file_down_info.pb.h  file_down_info_msg.pb.cc  file_down_info_msg.pb.h  file_down_msg.pb.cc  file_down_msg.pb.h  fileinfos_msg.pb.cc  fileinfos_msg.pb.h  package_msg.pb.cc  package_msg.pb.h
src/msgHandler/: Command.cc  Command.h  Handler.cc  Handler.h
src/transfiler/: AckRandom.cc  AckRandom.h  Client.cc  Client.h  Server.cc  Server.h
test/: CMakeLists.txt  TestAck.cc  TestClientFile.cc  TestConfig.cc  TestDir.cc  TestFile.cc  TestMemPool.cc  TestMenPool.cc  TestMsg.cc  TestServerFile.cc  TestServerFile2.cc  TestTimer.cc  TestUpdServer.cc
test_sh/: coredump.sh  test.sh
